fix license identifier

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "contracts"
   ],
   "author": "Dulguun Batmunkh <dulguunbatmunkh@gmail.com>",
-  "license": "GNU v3",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/dulguunbatmunkh/solidity-helper/issues"
   },
