--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ group: beta
 language: node_js
 node_js:
   - "6"
+install:
+  - npm install -g truffle
+  - npm install -g ethereumjs-testrpc
+  - npm install
 cache:
   yarn: true
 env:
