--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,14 @@
 dist: trusty
 sudo: required
-group: beta
 language: node_js
 node_js:
-  - "6"
+  - "7"
 install:
   - npm install -g truffle
   - npm install -g ethereumjs-testrpc
   - npm install
-cache:
-  yarn: true
-env:
-  -
-matrix:
-  fast_finish: true
 script:
-  - yarn test
+  - npm test
+before_script:
+  - testrpc > /dev/null &
+  - sleep 5
