--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Common contracts, libraries and templates for Solidity development",
   "scripts": {
-    "test": "scripts/test.sh"
+    "test": "truffle test"
   },
   "repository": {
     "type": "git",
