--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,5 @@ script:
 before_script:
   - testrpc > /dev/null &
   - sleep 5
+after_script:
+  - npm run coverage && cat coverage/lcov.info | coveralls
