--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/dulguunbatmunkh/solidity-helper/issues"
   },
-  "homepage": "https://github.com/dulguunbatmunkh/solidity-helper"
+  "homepage": "https://github.com/dulguunbatmunkh/solidity-helper",
+  "devDependencies": {
+    "coveralls": "^2.13.1",
+    "solidity-coverage": "https://github.com/sc-forks/solidity-coverage.git"
+  },
 }
